Collect gps location and set up basic site

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,15 @@
 services:
+  web: 
+    build: ./web-app
+    ports:
+      - "5000:5000"
+    depends_on:
+      - mongodb
+    environment:
+      - FLASK_ENV=development
+    volumes:
+      - ./web-app:/app
+
   mongodb:
     image: mongo
     container_name: mongodb
