--- a/.github/workflows/client-testing.yml
+++ b/.github/workflows/client-testing.yml
@@ -1,12 +1,13 @@
 name: ML client testing
 on: [pull_request]
+
 jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     strategy:
       matrix:
-        python-version: ["3.9", "3.11"]
+        python-version: ["3.9"]
 
     defaults:
       run:
@@ -22,6 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
+          pip install pipenv
+          pipenv install --dev
           pipenv install -e .
           pipenv install pytest coverage
 
