--- a/machine-learning-client/Pipfile
+++ b/machine-learning-client/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pylint = "*"
-black = "*"
-pytest = "*"
-coverage = "*"
+pymongo = "*"
 
 [dev-packages]
+pylint = "*"
 pytest = "*"
 build = "*"
+black = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.9"
