--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -2,7 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY . .
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+# Install pipenv
+RUN pip install --upgrade pip && pip install pipenv
 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
