User's location populates in map, fixed issue where ml-client wasn't running docker before

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 services:
   web: 
     build: ./web-app
-    container_name: flask-webapp
-    networks:
-      - appnet
     ports:
       - "5002:5002"
     depends_on:
       - mongodb
+      - ml-client
     environment:
       - FLASK_ENV=development
     volumes:
@@ -16,8 +14,6 @@ services:
   mongodb:
     image: mongo
     container_name: mongodb
-    networks:
-      - appnet
     ports:
       - "27017:27017"
     volumes:
@@ -26,19 +22,15 @@ services:
   ml-client:
     build:
       context: ./machine-learning-client
+    ports:
+      - "8000:8000"
     container_name: ml-client
-    networks:
-      - appnet
     depends_on:
       - mongodb
     volumes:
       - ./machine-learning-client/static:/app/static
     environment:
       - MONGO_URI=mongodb://mongodb:27017
-
-networks:
-  appnet:
-    driver: bridge
 
 volumes:
   mongo-data:
