--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -1,5 +1,5 @@
 name: Web App CI
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   test-web-app:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
