--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - mongodb
     volumes:
       - ./machine-learning-client/static:/app/static
+    env_file:
+      - .env
     environment:
       - MONGO_URI=mongodb://mongodb:27017
 
