--- a/web-app/Pipfile
+++ b/web-app/Pipfile
@@ -7,10 +7,11 @@ name = "pypi"
 flask = "*"
 pymongo = "*"
 pytest = "*"
+requests = "*"
 
 [dev-packages]
 pylint = "*"
 black = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.x"
